--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colored Marker Set</title><link rel="stylesheet" href="style.css">
+    <title>Colored Marker Set</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -27,6 +28,16 @@
 
             <!-- Spidol Biru -->
             <div class="marker blue">
+                <div class="cap"></div>
+                <div class="sleeve"></div>
+            </div>
+
+            <div class="marker cyan">
+                <div class="cap"></div>
+                <div class="sleeve"></div>
+            </div>
+
+            <div class="marker magenta">
                 <div class="cap"></div>
                 <div class="sleeve"></div>
             </div>
