--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <h2>Jenis Warna dalam CSS</h2>
             <ul>
                 <li><strong>Nama Warna:</strong> red, green, blue</li>
-                <li><strong>Hex:</strong> #ff0000, #00ff00, #0000ff</li>
-                <li><strong>RGB:</strong> rgb(255, 0, 0), rgb(0, 255, 0), rgb(0, 0, 255)</li>
-                <li><strong>HSL:</strong> hsl(0, 100%, 50%), hsl(120, 100%, 50%)</li>
+                <li><strong>Hex:</strong> #ff0000, #00ff00, #0000ff, #00ffff, #ff00ff</li>
+                <li><strong>RGB:</strong> rgb(255, 0, 0), rgb(0, 255, 0), rgb(0, 0, 255), rgb(0, 255, 255), rgb(255, 0, 255)</li>
+                <li><strong>HSL:</strong> hsl(0, 100%, 50%), hsl(120, 100%, 50%), rgb(0, 0, 255), rgb(0, 255, 255), rgb(255, 0, 255)</li>
             </ul>
         </div>
     </div>
