--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li><strong>Nama Warna:</strong> red, green, blue</li>
                 <li><strong>Hex:</strong> #ff0000, #00ff00, #0000ff, #00ffff, #ff00ff</li>
                 <li><strong>RGB:</strong> rgb(255, 0, 0), rgb(0, 255, 0), rgb(0, 0, 255), rgb(0, 255, 255), rgb(255, 0, 255)</li>
-                <li><strong>HSL:</strong> hsl(0, 100%, 50%), hsl(120, 100%, 50%), rgb(0, 0, 255), rgb(0, 255, 255), rgb(255, 0, 255)</li>
+                <li><strong>HSL:</strong> hsl(0, 100%, 50%), hsl(120, 100%, 50%), hsl(240, 100%, 50%), hsl(180, 100%, 50%), hsl(300, 100%, 50%)</li>
             </ul>
         </div>
     </div>
